# xband-radar-sim

./: .gitignore  PRESENTATION_GUIDE.md  README.md  compare_old_new.py  dynrange_test.py  full_simulation.py  full_simulation_blob.py  full_simulation_physics.py  full_simulation_pulse_modes.py  generate_presentation_figures.py  magnetron_charleston_demo.py  magnetron_coastal_demo.py  magnetron_real_terrain_demo.py  old_simulation.py  pulse_elongation_demo.py  pulse_length_comparison.py  pulse_sidelobe_demo.py  pyproject.toml  radar_simulation_paper.tex  run_ci.sh  setup_env.sh  target_shadow_demo.py
.github/workflows/: ci.yml
config/: default_config.yaml
docs/: radar_simulation_technical.tex
src/: __init__.py  config.py  config_magnetron.py  interfaces.py  magnetron_pipeline.py  pipeline.py
src/antenna/: __init__.py  excitation.py  farfield.py  slots.py  validation.py  waveguide.py
src/clutter/: __init__.py  models.py
src/propagation/: __init__.py  atmosphere.py  cpu_raytrace.py  multipath.py  pathloss.py  scene.py  terrain_masking.py
src/scattering/: __init__.py  analytical.py  integration.py  mesh.py  physical_optics.py
src/signal/: __init__.py  detection.py  magnetron_waveform.py  matched_filter.py  ppi_processing.py  waveform.py
src/targets/: __init__.py  maritime.py
src/terrain/: __init__.py  coastal_scene.py  generator.py  real_terrain.py
tests/: conftest.py  test_config.py  test_interfaces.py
tests/test_antenna/: test_excitation.py  test_slots.py  test_waveguide.py
tests/test_integration/: test_pipeline.py
(+8 files in other folders)
